--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="Dr. Salvador Sandoval, Ortopedista y Traumatólogo especializado en cirugía de rodilla, prótesis y lesiones deportivas. Atención profesional y personalizada en Veracruz.">
+    <meta name="keywords" content="ortopedista, traumatólogo, cirugía de rodilla, prótesis, lesiones deportivas, Veracruz">
+    <meta name="author" content="Dr. Salvador Sandoval">
 
       <!-- Fonts ============================================= -->
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,400i,500,600,700' rel='stylesheet' type='text/css'>
@@ -21,7 +24,7 @@
         <nav id="primary-menu" class="navbar navbar-expand-lg navbar-dark">
           <div class="container">
             <a class="navbar-brand" href="index.html">
-              <img class="logo logo-dark" src="assets/images/logo/logo-sandoval.png" alt="Kolaso Logo">
+              <img class="logo logo-dark" src="assets/images/logo/logo-sandoval.png" alt="Dr. Salvador Sandoval - Ortopedista y Traumatólogo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="toogle-inner"></span>
