--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="keywords" content="ortopedista, traumatólogo, cirugía de rodilla, prótesis, lesiones deportivas, Veracruz">
     <meta name="author" content="Dr. Salvador Sandoval">
 
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-sandoval.png">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+
       <!-- Fonts ============================================= -->
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,400i,500,600,700' rel='stylesheet' type='text/css'>
 
