--- a/index.html
+++ b/index.html
@@ -164,9 +164,11 @@
             <div class="col-12 col-md-6 col-lg-6">
               <div class="heading heading-1 mb-50 mt-30">
                 <h2 class="heading-title">Sobre Mí</h2>
-                <p class="heading-desc" style="text-align: justify;">Soy el Dr. Salvador Sandoval, Ortopedista Certificado especializado en Traumatología y Ortopedia. Cuento con un Máster en Cirugía Avanzada de Rodilla, que me permite abordar de manera eficiente y especializada lesiones complejas en esta área. Además, tengo un Diploma FIFA, que me respalda en el tratamiento de lesiones deportivas, especialmente en el contexto del fútbol.
+                <p class="heading-desc" style="text-align: justify;">Me gradué como Médico Cirujano en la Universidad Autónoma de Guadalajara, donde obtuve una formación integral en ciencias médicas y quirúrgicas, enfocándome en ofrecer un cuidado completo y de alta calidad a mis pacientes.
 
-                  Estoy certificado por diversas instituciones como la Universidad Atónoma de Guadalajara, Universidad Veracruazana y UFV,</p>
+                  Posteriormente, realicé mi especialización en Ortopedia en el Hospital Centro Médico Nacional de Veracruz, donde perfeccioné mis habilidades en el diagnóstico y tratamiento de afecciones musculoesqueléticas, así como en técnicas quirúrgicas avanzadas para tratar lesiones traumáticas y degenerativas.
+                  
+                  Actualmente, estoy cursando un Máster en Cirugía Avanzada de Rodilla en la Clínica Centro, avalado por la Universidad Francisco de Vitoria de Madrid España, con el objetivo de mantenerme a la vanguardia en las técnicas quirúrgicas más innovadoras y ofrecer a mis pacientes los tratamientos más avanzados en cirugía de rodilla.</p>
               </div>
               <div class="feature-panel">
                 <div class="feature-img">
