--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html dir="ltr" lang="es-MX">
 
   <head>
+
+    <title>Dr. Salvador Sandoval - Ortopedista y Traumatólogo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Dr. Salvador Sandoval, Ortopedista y Traumatólogo especializado en cirugía de rodilla, prótesis y lesiones deportivas. Atención profesional y personalizada en Veracruz.">
     <meta name="keywords" content="ortopedista, traumatólogo, cirugía de rodilla, prótesis, lesiones deportivas, Veracruz">
     <meta name="author" content="Dr. Salvador Sandoval">
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-sandoval.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/faviconsandoval.png">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 
       <!-- Fonts ============================================= -->
