--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 
   <head>
 
-    <title>Dr. Salvador Sandoval - Ortopedista y Traumatólogo</title>
+    <meta charset="UTF-8" />
+    <title> Dr. Salvador Sandoval </title>
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
+<link rel="icon" href="favicon.ico" type="assets/images/favicons/favicon-16x16.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Dr. Salvador Sandoval, Ortopedista y Traumatólogo especializado en cirugía de rodilla, prótesis y lesiones deportivas. Atención profesional y personalizada en Veracruz.">
     <meta name="keywords" content="ortopedista, traumatólogo, cirugía de rodilla, prótesis, lesiones deportivas, Veracruz">
     <meta name="author" content="Dr. Salvador Sandoval">
 
-<!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="assets/images/faviconsandoval.png">
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+
 
       <!-- Fonts ============================================= -->
     <link href='https://fonts.googleapis.com/css?family=Poppins:400,400i,500,600,700' rel='stylesheet' type='text/css'>
