--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <head>
 
     <meta charset="UTF-8" />
-    <title> Dr. Salvador Sandoval </title>
+    
+    <title> Dr. Salvador Sandoval - Traumatólogo Ortopedista</title>
 
 <!-- Favicon -->
 <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
