--- a/gonartrosis.html
+++ b/gonartrosis.html
@@ -54,7 +54,7 @@
               <div class="hero-headline">Dr. Salvador Sandoval
                               <div class="hero-bio">Aviso de Publicidad es 2530082002A00044</div>
               <div class="hero-action">
-                <a href="https://wa.me/+522291537655" class="btn btn--primary" data-scroll="scrollTo">¡Agenda tu Cita!</a>
+                <a href="https://api.whatsapp.com/send?phone=522291537655&text=Quisiera%20agendar%20una%20cita%20con%20el%20Dr.%20Salvador%20Sandoval" class="btn btn--primary" data-scroll="scrollTo">¡Agenda tu Cita!</a>
               </div>
             </div>
             <div class="col-12 col-md-6 col-lg-6"></div>
@@ -180,7 +180,7 @@
                     <img class='img-fluid' src="assets/images/footer/2.svg" alt="phone">
                   </div>
                   <h4>Horario</h4>
-                  <p>Lunes - Viernes 8:00am a 2:00pm</p>            
+                  <p>Lunes - Sábado 9:00am a 2:00pm</p>            
                 </div>
                 <!-- .widget-info-box end -->
               </div>
@@ -224,9 +224,11 @@
               </div>
               <!-- .col-md-6 end -->
               <div class="col-12 col-md-6 col-lg-6">
-                <div class="footer-social">
-              
-                  <a class="instagram" href="https://www.instagram.com/drsalvadorsandoval?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
+                <div class="footer-social" style="font-size: 1.5em;">
+                  <a class="facebook" href="https://www.facebook.com/share/1GVCvtHqU1/?mibextid=wwXIfr" target="_blank" style="margin-right: 10px;">
+                    <i class="fa fa-facebook"></i>
+                  </a>
+                  <a class="instagram" href="https://www.instagram.com/drsalvadorsandoval?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
                     <i class="fa fa-instagram"></i>
                   </a>
                 </div>
