--- a/protesis-de-rodilla.html
+++ b/protesis-de-rodilla.html
@@ -162,7 +162,7 @@
                     <img class='img-fluid' src="assets/images/footer/1.svg" alt="phone">
                   </div>
                   <h4>Teléfono</h4>
-                  <p><a href="https://wa.me/+522291537655" target="_blank">229 153 7655</a></p>                 
+                  <p><a href="https://wa.me/+523315393932" target="_blank">331 539 3932</a></p>                 
                 </div>
                 <!-- .widget-info-box end -->
               </div>
@@ -184,8 +184,8 @@
                     <img class='img-fluid' src="assets/images/footer/3.svg" alt="phone">
                   </div>
                   <h4>Ubicación</h4>
-                  <p>Av. Cuauhtémoc #985 Local 1 Plaza Cuauhtémoc, Veracruz, Ver.</p>
-                  <a href="https://www.google.com/maps?q=Av.+Cuauhtémoc+985+Local+1+Plaza+Cuauhtémoc,+Veracruz,+Ver." target="_blank">Ver en Google Maps</a>   
+                  <p>Calle Francisco Marques #21. Col. Mansiones del Real, CD Guzman, Jal.</p>
+                  <a href="https://maps.app.goo.gl/mHVa2erk1P9L648D9" target="_blank">Ver en Google Maps</a>   
                 </div>
                 <!-- .widget-info-box end -->
               </div>
