--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                     var phone = document.getElementById('phone').value;
                 
                     // Crear el enlace de WhatsApp con los datos del usuario
-                    var whatsappLink = 'https://wa.me/+522291537655?text=Hola, mi nombre es ' + encodeURIComponent(name) + ' y mi número es ' + encodeURIComponent(phone) + ' quisiera una cita con el Dr. Salvador Sandoval';
+                    var whatsappLink = 'https://wa.me/+523315393932?text=Hola, mi nombre es ' + encodeURIComponent(name) + ' y mi número es ' + encodeURIComponent(phone) + ' quisiera una cita con el Dr. Salvador Sandoval';
                 
                     // Redirigir al enlace de WhatsApp
                     window.location.href = whatsappLink;
@@ -511,7 +511,7 @@
                     <img src="assets/images/footer/1.svg" alt="phone">
                   </div>
                   <h4>Teléfono</h4>
-                  <p><a href="https://wa.me/+522291537655" target="_blank">229 153 7655</a></p>                 
+                  <p><a href="https://wa.me/+523315393932" target="_blank">331 539 3932</a></p>               
                 </div>
                 <!-- .widget-info-box end -->
               </div>
@@ -533,8 +533,8 @@
                     <img src="assets/images/footer/3.svg" alt="phone">
                   </div>
                   <h4>Ubicación</h4>
-                  <p>Av. Cuauhtémoc #985 Local 1 Plaza Cuauhtémoc, Veracruz, Ver.</p>
-                  <a href="https://www.google.com/maps?q=Av.+Cuauhtémoc+985+Local+1+Plaza+Cuauhtémoc,+Veracruz,+Ver." target="_blank">Ver en Google Maps</a>   
+                  <p>Calle Francisco Marques #21. Col. Mansiones del Real, CD Guzman, Jal.</p>
+                  <a href="https://maps.app.goo.gl/mHVa2erk1P9L648D9" target="_blank">Ver en Google Maps</a>   
                 </div>
                 <!-- .widget-info-box end -->
               </div>
